--- a/package.json
+++ b/package.json
@@ -42,18 +42,17 @@
     "angular-route": "1.6.9",
     "angular-vs-repeat": "1.1.7",
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.3",
+    "babel-loader": "7.1.4",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
     "babel-plugin-transform-es3-property-literals": "6.22.0",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-es2015-loose": "8.0.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "bootstrap": "3.3.7",
     "classnames": "2.2.5",
-    "css-loader": "0.28.10",
+    "css-loader": "0.28.11",
     "d3": "3.5.17",
     "diff-match-patch": "1.0.0",
     "draft-js": "0.10.5",
@@ -68,7 +67,7 @@
     "grunt-contrib-copy": "1.0.0",
     "grunt-filerev": "2.3.1",
     "grunt-usemin": "3.1.1",
-    "grunt-webpack": "3.0.2",
+    "grunt-webpack": "3.1.1",
     "html-loader": "0.5.5",
     "jquery": "3.3.1",
     "jquery-jcrop": "0.9.13",
@@ -98,12 +97,13 @@
     "react-textarea-autosize": "5.2.1",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
-    "sass-loader": "6.0.6",
+    "sass-loader": "7.0.1",
     "shortid": "2.2.8",
-    "style-loader": "0.20.2",
+    "style-loader": "0.21.0",
     "superdesk-ui-framework": "superdesk/superdesk-ui-framework#4d70af2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1"
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "3.1.3"
   },
   "devDependencies": {
     "btoa": "^1.1.2",
@@ -118,7 +118,7 @@
     "karma-jasmine": "^1.1.1",
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.13",
+    "karma-webpack": "^3.0.0",
     "protractor": "^5.1.2",
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^16.2.0",
